@@ -74,7 +74,7 @@ echo "=== Running test $0"
 if test -z "$AUTOMAKE"; then
    perllibdir=$srcdir/../lib
    export perllibdir
-   AUTOMAKE="$PERL ../../automake --amdir=$srcdir/.. --foreign"
+   AUTOMAKE="$PERL ../../automake --amdir=$srcdir/.. --foreign --Werror"
 fi
 
 # See how aclocal should be run.
