@@ -1,3 +1,10 @@
+2001-05-09  Tom Tromey  <tromey@redhat.com>
+
+	* automake.in (read_am_file): Correctly compute $saw_bk.
+	(scan_autoconf_files): Ensure configure_dist_common is always
+	set.
+	* tests/defs (AUTOMAKE): Added --Werror.
+
 2001-05-09  Pavel Roskin  <proski@gnu.org>
 
 	* automake.in (define_compiler_variable): Escape $(LIBTOOL) in
